# bytestream-rs

./: Cargo.toml  README.md
examples/: main.rs  write.rs
src/: byteorder.rs  lib.rs  optional.rs
