[package]
name = "bytestream"
version = "0.3.0"
authors = ["Patrik Svensson <patrik@patriksvensson.se>"]
description = "Provides a convenient way of writing binary data to a buffer."
license = "MIT"
repository = "https://github.com/patriksvensson/bytestream-rs"
keywords = ["byte", "binary", "read", "write"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.4.2", optional = true }

[dev-dependencies]
test-case = "1.1.0"

[features]
default = ["byteorder"]
